--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -32,3 +32,9 @@ build/
 ### VS Code ###
 .vscode/
 backend/src/main/resources/application.properties
+
+### API Keys ###
+.env
+**/gemini_api_key.txt
+**/application-local.properties
+**/application-dev.properties
